Overlapping toolbar partially solved

--- a/web/css/base.css
+++ b/web/css/base.css
@@ -45,7 +45,7 @@ root {
     width: 120px;
     float: right;
     display: inline-block;
-    margin-right: 30px;
+    margin-right: 20px;
 }
 
 #floating-toolbar{
@@ -59,7 +59,7 @@ root {
     float: right;
     box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.3), 0px 0px 10px rgba(0, 0, 0, 0.05) inset;
     position: fixed;
-    top: 104px;
+    top: 118px;
     
 }
 
