--- a/web/css/dashboard.css
+++ b/web/css/dashboard.css
@@ -16,8 +16,8 @@ body{
     height: 100%;
 }
 
-#dashboard-content a:hover{
-    text-decoration: none;
+#dashboard-middle{
+    width: 90%;
 }
 
 #dashboard-title{
@@ -35,6 +35,10 @@ body{
     width: 684px;
     margin-left: auto;
     margin-right: auto;
+}
+
+#overview-container a:hover{
+    text-decoration: none;
 }
 
 .dashboard-container{
